--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -76,6 +76,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="FireProjectile",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="FireProjectile",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
